# PCS_2026

Esercitazione1/: CMakeLists.txt  es1_media.cpp
Esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp
Esercitazione2/: CMakeLists.txt  es1.cpp  es2.cpp
Esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
Esercitazione4/: CMakeLists.txt  is_sorted.h  sorts.h  test_insertionsort.cpp  test_selectionsort.cpp
Esercitazione5/: CMakeLists.txt  measure_sorts.cpp  measure_sorts_es4.cpp  quicksort_ibrido.hpp  sorts.h  sorts.hpp  test_bubblesort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksort_ibrido.cpp
Esercitazione8/: CMakeLists.txt  test_grafo.cpp  undirected_graph.hpp
Esercitazione9/: CMakeLists.txt  dijkstra.hpp  fifo.hpp  main.cpp  recursive_dfs.hpp  undirected_edge.hpp
Progetto2026/: CMakeLists.txt  lifo.hpp  maglie.hpp  main_circuito.cpp  netlist.txt  visite.hpp
